# ClawNet

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  PROTOCOL.md  README.md  ROADMAP.md  async_model.pt  async_result.txt  async_validate.py  bitcode_compare.py  canonical_model.pt  execution_consensus_test.py  find_baseline.py  hn-post.md  validate_full_chain.py  verification_data.json
articles/: ast-consensus-article.md
autoclaw/: ast_normalizer.py
docs/: CONTRIBUTING.md
examples/: two-node-demo.sh
extension/: README.md  manifest.json
extension/src/background/: gpu-worker.js  offscreen.html  service-worker.js
extension/src/content/: content.js
extension/src/lib/: webgpu.js
extension/src/popup/: popup.html  popup.js
mother_model/: README.md  config.py  requirements.txt
mother_model/data/: synthesize.py  test_train.jsonl
mother_model/inference/: quantize.py  run_mother.py  run_tiny.py  self_contained_verify.py  serve.py
mother_model/model/: mother_model.py
mother_model/scripts/: quantize.sh  serve.sh  train.sh
mother_model/tokenizer/: code_tokenizer.py
mother_model/train/: dataset.py  train_mother.py
mvp/: child_models.py  config.py  model.py  mom.py  mvp.py
paper/: arxiv_main.html  arxiv_main.tex
rfc/: 001-distributed-expertise-network.md  002-router-model-ensemble.md
scripts/: build.js
signaling-server/: index.js  package.json
src/: crypto.rs  gossip.rs  ledger.rs  lib.rs  main.rs  scheduler.rs  soul.rs  transport.rs  worker.rs
